FilterBar&module, CoursesCard.module, Adminpanel&module, AdminPanel/Categories&module, CoursePage&module, FilterBarShop&module, Shop&module

--- a/client/src/components/datos/CoursesCard/CoursesCard.module.css
+++ b/client/src/components/datos/CoursesCard/CoursesCard.module.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.672);
+  background-color: #000000ab;
   color: rgb(246, 251, 255);
   /* animation:scale-up-horizontal-left 0.4s  */
 } @keyframes scale-up-horizontal-left{0%{transform:scaleX(.4);transform-origin:left center}100%{transform:scaleX(1);transform-origin:left center}}
