--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -3,11 +3,11 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  height: 7rem;
+  height: 6rem;
   z-index: 1;
   color: aliceblue;
-  background-color: rgba(0, 0, 0, 0.672);
-  animation:blur-in 1s ease
+  background-image: linear-gradient(to right,  #000000, #434343);
+  animation:blur-in 1s ease;
 } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
 /* .item {
@@ -49,11 +49,12 @@
     justify-content: center;
     width: 15%;
     height: 5rem;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .optionSort select {
-    height: 3rem;
+    height: 2.5rem;
+    border-radius: 6px;
 }
 
 .optionFilter {
@@ -62,20 +63,19 @@
     justify-content: center;
     align-content: space-evenly;
     width: 40%;
-    height: 7rem;
-    gap: 1rem;
+    height: 5rem;
+    gap: 0.5rem;
 }
-
 
 .optionFilter span {
     display: flex;
     justify-content: center;
-    gap: 5vw;
-    height: 3rem;
+    gap: 4vw;
 }
 
 .optionFilter select {
-    height: 100%;
+    height: 2.5rem;
+    border-radius: 6px;
     width: 50%;
 }
 
@@ -84,7 +84,7 @@
 }
 
 .component button {
-    min-height: 4rem;
+    min-height: 100%;
     width: 10%;
 }
 
