con suerte uno de los ultimos commits

--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -41,7 +41,7 @@
       background-color: #212121;
       box-shadow: rgba(0, 0, 0, 0.50) 20px 0 0;
     }
-    .shopbagOpen {
+    .shopbagOpenOption {
           animation: sdf 0.4 ;
       } @keyframes sdf {
           0% {
