--- a/client/src/components/views/AdminPanel/Categories.module.css
+++ b/client/src/components/views/AdminPanel/Categories.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   justify-content:center ;
   animation: blur-in 0.4s linear both;
-  padding: 3%;
+  /* padding: 3%; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
