--- a/client/src/components/views/ModalBannedUser/Modal.module.css
+++ b/client/src/components/views/ModalBannedUser/Modal.module.css
@@ -9,6 +9,7 @@
   bottom: 0;
   right: 0;
   position: fixed;
+  z-index: 9999;
   justify-content: center;
   justify-items: center;
   align-items: center;
