--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -66,7 +66,7 @@
     align-items: center;
     /* margin: 4rem; */
     gap: .5rem;
-    width: 100%;
+    min-width: 98vw;
     height: 20%;
     }
        .item {
