--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -83,9 +83,62 @@
     text-align: center;
 }
 
-.component button {
-    min-height: 100%;
+.component button, .responsive-component button {
+    border: 2px solid rgb(8, 156, 137);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
     width: 10%;
+    margin: 14px;
+    height: 60px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    animation: borderGradientAnimation1 4s linear infinite, borderGradientAnimation2 4s linear infinite, shadowGradientAnimation 4s linear infinite;
+}
+.component button:hover, .responsive-component button:hover {
+    transition:0.5s;
+    height: 60px; 
+    scale: 1.2;
+    background-color:#4cf4dd ;
+    border: none;
+    color:black;
+    cursor: pointer;
+    animation:shadow-drop-center 0.4s linear both
+}
+
+@keyframes borderGradientAnimation1 {
+	0%, 100% {
+	    border-image: linear-gradient(to right, #ff0000, #0000ff) 1;
+	}
+	25%, 75% {
+	    border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+	}
+	50% {
+	    border-image: linear-gradient(to right, #0000ff, #5b095b) 1;
+	}
+}
+@keyframes borderGradientAnimation2 {
+	0%, 100% {
+	    border-image: linear-gradient(to left, black, #ff0000, #0000ff) 1;
+	}
+	25%, 75% {
+	    border-image: linear-gradient(to left, #0000ff, black, #00ffff) 1;
+	}
+	50% {
+    	border-image: linear-gradient(to left, #0000ff, #5b095b, black) 1;
+	}
+}
+@keyframes shadowGradientAnimation {
+	0%, 100% {
+	box-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+	}
+	25%, 75% {
+	box-shadow: 0 0 10px rgba(0, 0, 255, 0.7);
+	}
+	50% {
+	box-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
+	}
 }
 
 @keyframes borderGradientAnimation1 {
@@ -135,8 +188,10 @@ align-items: center;
 align-self: center;
 background-color: white;
 position:absolute;
+justify-content: space-evenly;
 height: 50%;
 width: 80%;
+box-sizing: border-box;
 border-radius: 10px;
 }
 .modal-light {
@@ -149,10 +204,22 @@ border-radius: 10px;
 }
 
 .modal select {
-width: 50%;
-height: 10%;
-border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 2.5rem;
+    border-radius: 6px;
+    width: 100%;
 }
+
+.modalDiv2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+    width: 50%;
+} 
 
 /* ----------- RESPONSIVE ------------ */
 
@@ -172,7 +239,6 @@ border: 1px solid;
   width: 100%;
   height: 4%;
   padding: 1rem;
-  color: aliceblue;
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.672);
   overflow: hidden;
