--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -19,7 +19,7 @@
       gap: 1%;
       z-index: 9999;
       overflow-y: auto;
-      transition: height 0.3s ease;
+      transition: height 1s ease;
       animation: scale-up-horizontal-right 0.4s;
     } @keyframes scale-up-horizontal-right {
       0% {
@@ -41,7 +41,7 @@
       background-color: #212121;
       box-shadow: rgba(0, 0, 0, 0.50) 20px 0 0;
     }
-    .shopbagOpen {
+    .shopbagOpenOption {
           animation: sdf 0.4 ;
       } @keyframes sdf {
           0% {
