--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -146,6 +146,12 @@
     border-radius: 50%;
     object-fit: cover;
 }
+.picture-loading {
+    filter: opacity(0.8);
+}
+.editPicture-loading {
+    filter: opacity(0.8);
+}
 
 .config {
     position: absolute;
@@ -292,4 +298,25 @@
   .link:hover {
     color: white;
     background-color: rgb(200,0,0);
+  }
+
+  .spinner {
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-top: 4px solid #3498db; 
+    border-radius: 50%; 
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite; 
+    position: absolute;
+    top: 60px;
+    z-index: 100;
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg); 
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
