--- a/client/src/components/views/Shop/FilterBarShop.module.css
+++ b/client/src/components/views/Shop/FilterBarShop.module.css
@@ -4,7 +4,7 @@
    justify-content: space-around;
    /* width: 100%; */
    height: 6rem;
-   background: linear-gradient(to right, rgba(0, 180, 204, 0.623) 0%, rgba(161,247,190,1) 100%);
+   background: linear-gradient(to right, rgba(7, 154, 173, 0.979) 0%, rgb(161, 247, 190) 100%);
    transition: transform 0.3s, filter 0.3s,width 0.2s;
 }
 
