--- a/client/src/components/views/About/About.module.css
+++ b/client/src/components/views/About/About.module.css
@@ -18,7 +18,8 @@
 }
 
 .title h1 {
-    margin: 60px
+    margin: 10%;
+    font-size: 200%;
 }
 
 .content {
@@ -36,7 +37,41 @@
     flex-direction: column;
     width: 20rem;
     margin-top: 4rem;
-}
+    gap: 15px;
+    animation: slideInFadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+} @keyframes slideInFadeIn {
+    from {
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  .team:nth-child(1) {
+    animation-delay: 0.4s;
+  }
+  .team:nth-child(2) {
+    animation-delay: 0.8s;
+  }
+  .team:nth-child(3) {
+    animation-delay: 1.2s;
+  }
+  .team:nth-child(4) {
+    animation-delay: 1.6s;
+  }
+  .team:nth-child(5) {
+    animation-delay: 2s;
+  }
+  .team:nth-child(6) {
+    animation-delay: 2.4s;
+  }
+  .team:nth-child(7) {
+    animation-delay: 2.8s;
+  }
+
+  
 
 .imageWrapper {
     display: flex;
