--- a/client/src/components/views/About/About.module.css
+++ b/client/src/components/views/About/About.module.css
@@ -1,54 +1,108 @@
 .component {
-    position:absolute;
-    top: var(--navBarHeight);
-    width: 100%;
-    min-height: calc(100vh - var(--navBarHeight));
-    animation: blur-in 1s ease;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+   position:absolute;
+   top: var(--navBarHeight);
+   width: 100%;
+   min-height: calc(100vh - var(--navBarHeight));
+   animation: blur-in 1s ease;
+   display: flex;
+   flex-direction: column;
+   box-sizing: border-box;
 }
 @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
 .component-dark {
-    background-color: #111111;
+   background-color: #111111;
 }
 
 .title {
 }
 
 .title h1 {
-    margin: 10%;
-    font-size: 200%;
+   margin: 10%;
+   font-size: 200%;
 }
 
 .content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    box-sizing: border-box;
-    width: 100%;
-    gap: 3rem;
-    padding: 2%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+   box-sizing: border-box;
+   width: 100%;
+   gap: 3rem;
+   padding:  5%;
 }
 
 .team {
-    display: flex;
-    flex-direction: column;
-    width: 20rem;
-    margin-top: 4rem;
-    gap: 15px;
-    animation: slideInFadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-} @keyframes slideInFadeIn {
-    from {
-      opacity: 0;
-      transform: translateX(-20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
+   display: flex;
+   flex-direction: column;
+   width: 16rem;
+   margin-top: 4rem;
+   gap: 15px;
+
+   animation: slideInFadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+   position: relative;
+   transition: 1s ease;
+}
+.team:hover {
+   scale: 1.1;
+}
+
+.imageWrapper::before {
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: -100%;
+   height: 100%;
+   background-image: linear-gradient(135deg, #fcbd00, #fb00ff, #00f0b5, #ffd452, #bdfffb, #ffa500);
+   background-size: 600% 100%;
+   opacity: 0;
+   pointer-events: none;
+   border-radius: 15px 15px 0 0;
+   transform: scaleX(0); 
+   transition: transform 0.5s, opacity 0.5s;
+   z-index: -1;
+ }
+ 
+ .imageWrapper:hover::before {
+   opacity: 1;
+   transform: scaleX(2);
+}
+
+
+.imageWrapper {
+   display: flex;
+   justify-content: center;
+   width: 100%;
+   background-color: transparent;
+   transition: box-shadow 0.5s;
+   border-radius: 15px 15px 0 0;
+}
+
+.imageWrapper img {
+   width: 100%;
+   display: flex;
+   margin-top: -4rem;
+   height: auto;
+   z-index: 1;
+}
+
+.imageWrapper:hover {
+   box-shadow: 0 0 15px 5px rgba(255, 202, 61, 0.8), 0 0 30px 8px rgba(0, 221, 250, 0.9);
+   /* box-shadow: 0 0 15px 5px rgba(255, 210, 60, 0.8), 0 0 30px 8px rgba(0, 195, 255, 0.8); */
+   cursor: pointer;
+}
+ 
+ @keyframes slideInFadeIn {
+   from {
+   opacity: 0;
+   transform: translateX(-20px);
+   }
+   to {
+   opacity: 1;
+   transform: translateX(0);
+   }
+}
   .team:nth-child(1) {
     animation-delay: 0.4s;
   }
@@ -71,85 +125,66 @@
     animation-delay: 2.8s;
   }
 
-  
-
-.imageWrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: transparent;
-    border-radius: 15px 15px 0 0;
-}
-
-.imageWrapper img {
-    width: 100%;
-    display: flex;
-    margin-top: -4rem;
-    height: auto;
-}
-
-
-
 
 /* ----------------------- */
 
 .francisco {
-    /* background-color: #ffd277; */
-    /* background: linear-gradient(#ffdc95, #99e4ff); */
-    /* background: linear-gradient(#ffdc95, #f6a212); */
-    /* background: linear-gradient(135deg, #ffd452, #9a6df4); */
-    background: linear-gradient(135deg, #009fff, #ec2f4b);
+   /* background-color: #ffd277; */
+   /* background: linear-gradient(#ffdc95, #99e4ff); */
+   /* background: linear-gradient(#ffdc95, #f6a212); */
+   /* background: linear-gradient(135deg, #ffd452, #9a6df4); */
+   background: linear-gradient(135deg, #009fff, #ec2f4b);
 }
 
 .gianina {
-    /* background-color: #ffafaf; */
-    /* background: linear-gradient(#ffc7c7, #ff8b8b); */
-    /* background: linear-gradient(#fba9a9, #ff4f4f); */
-    /* background: linear-gradient(#beffda, #ff9494); */
-    /* background: linear-gradient(135deg, #ff91a4, #ffce8e); */
-    /* background: linear-gradient(135deg, #fccc82, #ba23ba); */
-    /* background: linear-gradient(135deg, #b1fc7f, #fe57d7); */
-    /* background: linear-gradient(135deg, #ffe100, #d227d5); */
-    background: linear-gradient(135deg, #d0ff00, #d227d5);
+   /* background-color: #ffafaf; */
+   /* background: linear-gradient(#ffc7c7, #ff8b8b); */
+   /* background: linear-gradient(#fba9a9, #ff4f4f); */
+   /* background: linear-gradient(#beffda, #ff9494); */
+   /* background: linear-gradient(135deg, #ff91a4, #ffce8e); */
+   /* background: linear-gradient(135deg, #fccc82, #ba23ba); */
+   /* background: linear-gradient(135deg, #b1fc7f, #fe57d7); */
+   /* background: linear-gradient(135deg, #ffe100, #d227d5); */
+   background: linear-gradient(135deg, #d0ff00, #d227d5);
 }
 
 .jorge {
-    /* background-color: #ccffa9; */
-    /* background: linear-gradient(#ccffa9, #a3fd67); */
-    /* background: linear-gradient(#c2c8ff, #5667fc); */
-    /* background: linear-gradient(#85fff7, #6776fd); */
-    /* background: linear-gradient(135deg, #009fff, #ec2f4b); */
-    background: linear-gradient(135deg, #66edd2, #ff3eb8);
+   /* background-color: #ccffa9; */
+   /* background: linear-gradient(#ccffa9, #a3fd67); */
+   /* background: linear-gradient(#c2c8ff, #5667fc); */
+   /* background: linear-gradient(#85fff7, #6776fd); */
+   /* background: linear-gradient(135deg, #009fff, #ec2f4b); */
+   background: linear-gradient(135deg, #66edd2, #ff3eb8);
 }
 
 .micaela {
-    /* background-color: #58fff4; */
-    /* background: linear-gradient(#bdfffb, #58fff4); */
-    /* background: linear-gradient(135deg, #ff91a4, #ffce8e); */
-    background: linear-gradient(135deg, #a462ff, #bdfffb);
+   /* background-color: #58fff4; */
+   /* background: linear-gradient(#bdfffb, #58fff4); */
+   /* background: linear-gradient(135deg, #ff91a4, #ffce8e); */
+   background: linear-gradient(135deg, #a462ff, #bdfffb);
 }
 
 .santiago {
-    /* background-color: #1fc3ff; */
-    /* background: linear-gradient(#99e4ff, #1fc3ff); */
-    /* background: linear-gradient(135deg, #9b1df0, #00f0b5); */
-    /* background: linear-gradient(135deg, #ffb400, #06cc8a); */
-    background: linear-gradient(135deg,#81ddff, #a3fd67);
+   /* background-color: #1fc3ff; */
+   /* background: linear-gradient(#99e4ff, #1fc3ff); */
+   /* background: linear-gradient(135deg, #9b1df0, #00f0b5); */
+   /* background: linear-gradient(135deg, #ffb400, #06cc8a); */
+   background: linear-gradient(135deg,#81ddff, #a3fd67);
 }
 
 .sebastian {
-    /* background-color: #ffed26; */
-    /* background: linear-gradient(#fff9b2, #ffed26); */
-    /* background: linear-gradient(#f6a212, #ffed26); */
-    /* background: linear-gradient(135deg, #fdd819, #e80505); */
-    background: linear-gradient(135deg, #fdd819, #e12c2c);
+   /* background-color: #ffed26; */
+   /* background: linear-gradient(#fff9b2, #ffed26); */
+   /* background: linear-gradient(#f6a212, #ffed26); */
+   /* background: linear-gradient(135deg, #fdd819, #e80505); */
+   background: linear-gradient(135deg, #fdd819, #e12c2c);
 }
 
 .sol {
-    /* background-color: #ffd07f; */
-    /* background: linear-gradient(#ddc5ff, #b683ff); */
-    /* background: linear-gradient(#ffe1ae, #ffc258); */
-    /* background: linear-gradient(135deg, #ff8b8b, #ffc258); */
-    /* background: linear-gradient(135deg, #ff6b6b, #ffa69e); */
-    background: linear-gradient(135deg, #00a1a1, #b7f8db);
+   /* background-color: #ffd07f; */
+   /* background: linear-gradient(#ddc5ff, #b683ff); */
+   /* background: linear-gradient(#ffe1ae, #ffc258); */
+   /* background: linear-gradient(135deg, #ff8b8b, #ffc258); */
+   /* background: linear-gradient(135deg, #ff6b6b, #ffa69e); */
+   background: linear-gradient(135deg, #00a1a1, #b7f8db);
 }
