--- a/client/src/components/views/About/About.module.css
+++ b/client/src/components/views/About/About.module.css
@@ -42,17 +42,20 @@
    animation: slideInFadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
    position: relative;
    transition: 1s ease;
+   z-index: 1; 
+
 }
 .team:hover {
    scale: 1.1;
 }
+
 
 .imageWrapper::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
-   width: -100%;
+   width: 100%;
    height: 100%;
    background-image: linear-gradient(135deg, #fcbd00, #fb00ff, #00f0b5, #ffd452, #bdfffb, #ffa500);
    background-size: 600% 100%;
@@ -60,8 +63,7 @@
    pointer-events: none;
    border-radius: 15px 15px 0 0;
    transform: scaleX(0); 
-   transition: transform 0.5s, opacity 0.5s;
-   z-index: -1;
+   transition: transform 0.5s, opacity 0.5s; 
  }
  
  .imageWrapper:hover::before {
@@ -76,6 +78,9 @@
    width: 100%;
    background-color: transparent;
    transition: box-shadow 0.5s;
+   overflow: hidden;
+   z-index: 0;
+ 
    border-radius: 15px 15px 0 0;
 }
 
@@ -85,10 +90,12 @@
    margin-top: -4rem;
    height: auto;
    z-index: 1;
+   position: relative; 
+
 }
 
 .imageWrapper:hover {
-   box-shadow: 0 0 15px 5px rgba(255, 202, 61, 0.8), 0 0 30px 8px rgba(0, 221, 250, 0.9);
+   box-shadow: 0 0 15px 5px rgba(255, 202, 61, 1), 0 0 30px 8px rgba(0, 221, 250, 0.9);
    /* box-shadow: 0 0 15px 5px rgba(255, 210, 60, 0.8), 0 0 30px 8px rgba(0, 195, 255, 0.8); */
    cursor: pointer;
 }
