--- a/client/src/components/views/About/About.module.css
+++ b/client/src/components/views/About/About.module.css
@@ -47,7 +47,6 @@
    scale: 1.1;
 }
 
-
 .imageWrapper {
    display: flex;
    justify-content: center;
@@ -56,7 +55,6 @@
    border-radius: 15px 15px 0 0;
    transition: box-shadow 0.5s;
    position: relative;
-
 }
 
 .imageWrapper img {
@@ -64,82 +62,67 @@
    display: flex;
    margin-top: -4rem;
    height: auto;
-   z-index: 699   ;
+   z-index: 699;
 }
 
 .imageWrapper:hover {
    box-shadow: 0 0 15px 5px rgba(255, 202, 61, 1), 0 0 30px 8px rgba(0, 221, 250, 0.9);
-   /* box-shadow: 0 0 15px 5px rgba(255, 210, 60, 0.8), 0 0 30px 8px rgba(0, 195, 255, 0.8); */
-   animation: shining 1s linear infinite;
+   /* box-shadow: 0 0 15px 5px rgba(255, 210, 60, 0.8), 0 0 30px 8px rgba(0, 195, 255, 0.8); */  
    cursor: pointer;
-}
-
-.imageWrapper::before {
-   content: "";
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   border-radius: 15px 15px 0 0;
-   height: 100%;
-   background: linear-gradient(135deg, #ff0000, #00ff00);
-   background-size: 200% 100%;
-   animation: shining 4s linear infinite;
-   z-index: 1;
-   animation-play-state: paused;
-
-}
-.imageWrapper:hover::before {
-   animation-play-state: running;
    background-position: 100% 100%;
+   background-size: 200% 100%;
 }
+
 
 @keyframes shining {
-   0%, 100% {
+   0% {
       background-position: 0 0;
-    }
-    25% {
+   }
+   25% {
       background-position: 100% 0;
-    }
-    50% {
+   }
+   50% {
       background-position: 100% 100%;
-    }
-    75% {
+   }
+   75% {
       background-position: 0 100%;
-    }
+   }
+   100% {
+      background-position: 0 0;
+   }
 }
 
- @keyframes slideInFadeIn {
+@keyframes slideInFadeIn {
    from {
-   opacity: 0;
-   transform: translateX(-20px);
+      opacity: 0;
+      transform: translateX(-20px);
    }
    to {
-   opacity: 1;
-   transform: translateX(0);
+      opacity: 1;
+      transform: translateX(0);
    }
 }
-  .team:nth-child(1) {
-    animation-delay: 0.4s;
-  }
-  .team:nth-child(2) {
-    animation-delay: 0.8s;
-  }
-  .team:nth-child(3) {
-    animation-delay: 1.2s;
-  }
-  .team:nth-child(4) {
-    animation-delay: 1.6s;
-  }
-  .team:nth-child(5) {
-    animation-delay: 2s;
-  }
-  .team:nth-child(6) {
-    animation-delay: 2.4s;
-  }
-  .team:nth-child(7) {
-    animation-delay: 2.8s;
-  }
+.team:nth-child(1) {
+   animation-delay: 0.4s;
+}
+.team:nth-child(2) {
+   animation-delay: 0.8s;
+}
+.team:nth-child(3) {
+   animation-delay: 1.2s;
+}
+.team:nth-child(4) {
+   animation-delay: 1.6s;
+}
+.team:nth-child(5) {
+   animation-delay: 2s;
+}
+.team:nth-child(6) {
+   animation-delay: 2.4s;
+}
+.team:nth-child(7) {
+   animation-delay: 2.8s;
+}
 
 
 /* ----------------------- */
@@ -150,9 +133,8 @@
    /* background: linear-gradient(#ffdc95, #f6a212); */
    /* background: linear-gradient(135deg, #ffd452, #9a6df4); */
    background: linear-gradient(135deg, #009fff, #ec2f4b);
-   animation: shining 1s linear infinite; 
+   animation: shining 4s linear infinite; 
 }
-
 .gianina {
    /* background-color: #ffafaf; */
    /* background: linear-gradient(#ffc7c7, #ff8b8b); */
@@ -163,8 +145,8 @@
    /* background: linear-gradient(135deg, #b1fc7f, #fe57d7); */
    /* background: linear-gradient(135deg, #ffe100, #d227d5); */
    background: linear-gradient(135deg, #d0ff00, #d227d5);
+   animation: shining 4s linear infinite; 
 }
-
 .jorge {
    /* background-color: #ccffa9; */
    /* background: linear-gradient(#ccffa9, #a3fd67); */
@@ -172,31 +154,31 @@
    /* background: linear-gradient(#85fff7, #6776fd); */
    /* background: linear-gradient(135deg, #009fff, #ec2f4b); */
    background: linear-gradient(135deg, #66edd2, #ff3eb8);
+   animation: shining 4s linear infinite; 
 }
-
 .micaela {
    /* background-color: #58fff4; */
    /* background: linear-gradient(#bdfffb, #58fff4); */
    /* background: linear-gradient(135deg, #ff91a4, #ffce8e); */
    background: linear-gradient(135deg, #a462ff, #bdfffb);
+   animation: shining 4s linear infinite; 
 }
-
 .santiago {
    /* background-color: #1fc3ff; */
    /* background: linear-gradient(#99e4ff, #1fc3ff); */
    /* background: linear-gradient(135deg, #9b1df0, #00f0b5); */
    /* background: linear-gradient(135deg, #ffb400, #06cc8a); */
    background: linear-gradient(135deg,#81ddff, #a3fd67);
+   animation: shining 4s linear infinite; 
 }
-
 .sebastian {
    /* background-color: #ffed26; */
    /* background: linear-gradient(#fff9b2, #ffed26); */
    /* background: linear-gradient(#f6a212, #ffed26); */
    /* background: linear-gradient(135deg, #fdd819, #e80505); */
-   background: linear-gradient(135deg, #fdd819, #e12c2c);
+   background: linear-gradient(135deg, #ffd500, #e12c2c);
+   animation: shining 4s linear infinite; 
 }
-
 .sol {
    /* background-color: #ffd07f; */
    /* background: linear-gradient(#ddc5ff, #b683ff); */
@@ -204,4 +186,5 @@
    /* background: linear-gradient(135deg, #ff8b8b, #ffc258); */
    /* background: linear-gradient(135deg, #ff6b6b, #ffa69e); */
    background: linear-gradient(135deg, #00a1a1, #b7f8db);
+   animation: shining 4s linear infinite; 
 }
