--- a/client/src/components/views/LandingPage/LandingPage2.module.css
+++ b/client/src/components/views/LandingPage/LandingPage2.module.css
@@ -97,6 +97,7 @@
    z-index: 11;
    box-sizing: border-box;
    padding: 0 33%;
+   transition: all 0.5s;
    /* margin: 12% 0 0; */
 }
 
@@ -139,24 +140,6 @@
       animation:shadow-drop-center 0.4s linear both;
 
    } @keyframes shadow-drop-center{0%{box-shadow:0 0 0 0 transparent}100%{box-shadow:0 0 20px 0 rgb(60, 247, 206)}}
-   .boton1 p {
-      margin: 0 15px;
-   }
-   .boton2Container{
-      display: flex;
-      width: 60%;
-      margin: 5px;
-      transition: all 0.5s;
-   }
-   /* .boton:hover {
-      background-color: #0023944f;
-      opacity: 1;
-      padding-right: 425px;
-   } */
-   .boton2Container:hover {
-      width: 100%;
-   }
-
    .boton1:hover {
       background-color: #0023944f;
       opacity: 1;
@@ -164,9 +147,72 @@
       /* transition: ease 2s linear; */
       /* padding-right: 425px; */
    }
+   .boton1 p {
+      margin: 0 15px;
+      font-size: 1.25rem;
+   }
+   .boton2Container{
+      display: flex;
+      width: 60%;
+      margin: 5px;
+      transition: all 0.5s;
+   }
+   .boton2Container:hover {
+      width: 100%;
+   }
+   /* .boton:hover {
+      background-color: #0023944f;
+      opacity: 1;
+      padding-right: 425px;
+   } */
 
    /* .botoncontainer {
       text-align:auto;
       width: 100px;
       height: 100px;
    } */
+
+
+/* ---------- RESPONSIVE ----------- */
+
+@media screen and (max-width: 1100px) {
+   .container {
+      padding: 0 28%;
+   }
+}
+
+@media screen and (max-width: 900px) {
+   .container {
+      padding: 0 24%;
+   }
+}
+
+@media screen and (max-width: 750px) {
+   .container {
+      padding: 0 20%;
+   }
+}
+
+@media screen and (max-width: 650px) {
+   .container {
+      padding: 0 16%;
+   }
+}
+
+@media screen and (max-width: 580px) {
+   .container {
+      padding: 0 10%;
+   }
+   .title {
+      font-size: 19vw;
+   }
+   .sectionBanner {
+
+   }
+}
+
+@media screen and (max-width: 500px) {
+   .container {
+      /* padding: 0 -30px; */
+   }
+}
