--- a/client/src/components/datos/LoginForm/LoginForm.module.css
+++ b/client/src/components/datos/LoginForm/LoginForm.module.css
@@ -13,7 +13,7 @@
    width: 100vw;
    height: 100vh;
    color: aliceblue;
-   background-color: rgba(0, 0, 0, 0.672);
+   /* background-color: rgba(0, 0, 0, 0.672); */
    /* left: 31.9%; */
    /* top: -240%; */
    /* justify-items: center; */
@@ -41,10 +41,10 @@
    border-radius: 4px;
    background-image: linear-gradient(
       to right,
-      /* rgba(27, 149, 155, 0.822), */
-      /* rgba(102, 51, 153, 0.658), */
-      rgba(27, 149, 155),
-      rgba(102, 51, 153)
+      rgba(27, 149, 155, 0.822),
+      rgba(102, 51, 153, 0.658)
+      /* rgba(27, 149, 155), */
+      /* rgba(102, 51, 153) */
    );
    animation: scale-up-vertical-top 0.4s linear;
 }
@@ -84,14 +84,24 @@
    border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
    background-clip: padding-box;
    animation: borderGradientAnimation1 infinite 2.5s;
-   font-size: 16px;
+   font-size: 90%;
    cursor: pointer;
    transition: background-color 0.3s ease;
 }
-
 .container button:hover {
    background-color: #000000;
    color: white;
+}
+
+.options {
+   display: flex;
+   justify-content: space-evenly;
+   width: 100%;
+}
+
+.button2 {
+   width: 35%;
+   /* font-size: 10%; */
 }
 
 @keyframes borderGradientAnimation1 {
@@ -129,7 +139,7 @@
    height: 66px;
    width: 100%;
    padding: 0;
-   /* padding: 20px; */
+   padding: 20px;
    border-radius: 4px;
    border: none;
    text-align: center;
@@ -160,3 +170,13 @@
    cursor: default;
 }
 
+/* ----------- RESPONSIVE ---------- */
+
+@media screen and (max-width: 390px) {
+   .form {
+      width: 90%;
+   }
+   .container button {
+      font-size: 4vw;
+   }
+}
