--- a/client/src/components/datos/LoginForm/LoginForm.module.css
+++ b/client/src/components/datos/LoginForm/LoginForm.module.css
@@ -13,7 +13,7 @@
    width: 100vw;
    height: 100vh;
    color: aliceblue;
-   /* background-color: rgba(0, 0, 0, 0.672); */
+   background-color: rgba(0, 0, 0, 0.672);
    /* left: 31.9%; */
    /* top: -240%; */
    /* justify-items: center; */
