--- a/client/src/components/datos/LoginForm/LoginForm.module.css
+++ b/client/src/components/datos/LoginForm/LoginForm.module.css
@@ -3,6 +3,33 @@
    position: relative;
 }
 
+.boton1 {
+    display: flex;
+    align-items: center;
+    height: 66px;
+    width: 100%;
+    padding: 0;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
+    font-size: 28px;
+    color: #ffffff;
+    background-color: #28b0b4;
+    transition: all 0.5s;
+    cursor: pointer;
+    animation:shadow-drop-center 0.4s linear both;
+ } @keyframes shadow-drop-center{0%{box-shadow:0 0 0 0 transparent}100%{box-shadow:0 0 20px 0 rgb(60, 247, 206)}}
+ 
+ .boton1 p {
+    margin: 0 15px;
+    font-size: 1.25rem;
+ }
+ .boton1:hover {
+    background-color: #0023944f;
+    opacity: 1;
+    width: 100%;
+ }
+
 .container {
    display: flex;
    justify-content: center;
@@ -13,7 +40,7 @@
    width: 100vw;
    height: 100vh;
    color: aliceblue;
-   background-color: rgba(0, 0, 0, 0.672);
+   background-color: rgba(0, 0, 0, 0.3);
    animation: blur-in 0.4s linear both;
 } @keyframes blur-in {
    0% {
@@ -40,14 +67,13 @@
       to right,
       rgba(27, 149, 155, 0.822),
       rgba(102, 51, 153, 0.658)
-      /* rgba(27, 149, 155), */
-      /* rgba(102, 51, 153) */
+
+/* OPCION */
+      /* rgba(27, 149, 155),
+      rgba(102, 51, 153) */
    );
    animation: scale-up-vertical-top 0.4s linear;
-}
-
-
-@keyframes scale-up-vertical-top {
+} @keyframes scale-up-vertical-top {
    0% {
          transform: scaleY(0.4);
          transform-origin: center top;
@@ -58,47 +84,95 @@
    }
 }
 
+
+.closeButton {
+    display: flex;
+    position: absolute;
+    right: 4px;
+    scale: 0.8;
+ }
+
 .label {
    display: flex;
+   font-weight: bold;
    flex-direction: column;
    margin-bottom: 5px;
 }
-
 .input {
    padding: 3%;
    width: 70%;
    border-radius: 8px;
-   border: 1px solid #ccc;
    margin-top: 5px;
    margin-bottom: 3%;
+   border: none;
+   transition: all 0.5s ease;
+}
+.focused {
+   outline: none;
+   box-shadow: inset 0px 0 6px 5px rgb(200, 200, 200);
+
+/* OPCION */
+   /* animation: inset-boxshadow 3.5s infinite; */
+}
+@keyframes inset-boxshadow {
+  0% {
+    box-shadow: inset 1px 0px 3px 1px #ff00ff, inset -1px 0 3px 1px #ff0000;
+  }
+  20% {
+    box-shadow: inset 1px 0px 3px 1px #ff0000, inset -1px 0 3px 1px #800080;
+  }
+  40% {
+    box-shadow: inset 1px 0px 3px 1px #800080, inset -1px 0 3px 1px #0000ff;
+  }
+  60% {
+    box-shadow: inset 1px 0px 3px 1px #0000ff, inset -1px 0 3px 1px #00ffff;
+  }
+  80% {
+    box-shadow: inset 1px 0px 3px 1px #00ffff, inset -1px 0 3px 1px #ff00ff;
+  }
+  100% {
+    box-shadow: inset 1px 0px 3px 1px #ff00ff, inset -1px 0 3px 1px #ff00ff;
+  }
+}
+.errorIn {
+    animation: none !important;
+    border: 1.5px solid #ff3a61 !important;
+    outline: none;
+    box-shadow: inset 0px 0 3px 3px rgb(247, 213, 213);
 }
 
-.container button {
-   padding: 7px 20px;
-   background-color: #ffffffff;
-   color: #010101;
-   border: 2px solid;
-   border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
-   background-clip: padding-box;
-   animation: borderGradientAnimation1 infinite 2.5s;
-   font-size: 90%;
-   cursor: pointer;
-   transition: background-color 0.3s ease;
+.error {
+    margin: 0;
 }
-.container button:hover {
-   background-color: #000000;
-   color: white;
+
+.recommendation {
+    margin: 30px 0 20px
 }
 
 .options {
-   display: flex;
-   justify-content: space-evenly;
-   width: 100%;
-}
+      display: flex;
+      justify-content: space-evenly;
+      width: 100%;
+   }
+   .container button {
+      padding: 7px 20px;
+      background-color: #ffffffff;
+      color: #010101;
+      border: 2px solid;
+      background-clip: padding-box;
+      font-size: 90%;
+      transition: background-color 0.3s ease;
+      animation: borderGradientAnimation1 infinite 2.5s;
+    }
+    .container button:hover {
+       cursor: pointer;
+      background-color: #000000;
+      color: white;
+   }
 
-.button2 {
-   width: 35%;
-}
+   .boton2 {
+      width: 35%;
+   }
 
 @keyframes borderGradientAnimation1 {
    0% {
@@ -121,49 +195,14 @@
    }
 }
 
-.closeButton {
-   display: flex;
-   position: absolute;
-   right: 4px;
-   scale: 0.8;
-}
-
-.boton1 {
-   /* display: inline-block; */
-   display: flex;
-   align-items: center;
-   height: 66px;
-   width: 100%;
-   padding: 0;
-   border-radius: 4px;
-   border: none;
-   text-align: center;
-   font-size: 28px;
-   color: #ffffff;
-   background-color: #28b0b4;
-   transition: all 0.5s;
-   cursor: pointer;
-   animation:shadow-drop-center 0.4s linear both;
-} @keyframes shadow-drop-center{0%{box-shadow:0 0 0 0 transparent}100%{box-shadow:0 0 20px 0 rgb(60, 247, 206)}}
-
-.boton1 p {
-   margin: 0 15px;
-   font-size: 1.25rem;
-}
-.boton1:hover {
-   background-color: #0023944f;
-   opacity: 1;
-   width: 100%;
-}
-
 .buttonDisabled {
    background-color: white;
-   opacity: 0.8;
+   opacity: 0.6;
    border: none;
    color: black !important;
 }
 .buttonDisabled:hover {
-   cursor: default;
+   cursor: default !important;
    background-color: #ffffff !important;
 }
 
